Fix flame on mobile browsers

--- a/style.css
+++ b/style.css
@@ -150,6 +150,7 @@ dd {
 	margin: 5em auto 0 auto;
 	width: 6em;
 	height: 8em;
+  position: relative;
 }
 
 .particle {
